[project]
name = "ofi-nccl"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "typer>=0.13.1",
]

[project.urls]
Homepage = "https://github.com/aws/aws-ofi-nccl"

[project.scripts]
show-tuner-decisions = "ofi_nccl.tuner.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]
